# alphazero

./: .gitignore  .gitmodules  .info  CONFIGURATION.md  LICENSE  README.md  config.py  env.sh  general_config.py  install.sh  run.sh
conf/: .gitignore  hconfig.py
mcts/: CMakeLists.txt  cmcts.cpp  cmcts.h  const.py  documentation.txt  files.txt  main.cpp  module.cpp  node.cpp  node.h  setup.py  state.cpp  state.h  test.cpp
mcts/src/: cmcts.cpp  cmcts.h  main.cpp  module.cpp  node.cpp  node.h  state.cpp  state.h  stats.h
src/: debug.py  documentation.txt  eval.py  init.py  model.py  pbrain-server.py  ploting.py  self_play.py  server.py  tools.py  train.py
